--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Flights#index</h1>
-<p>Find me in app/views/flights/index.html.erb</p>
+<h1>Flights</h1>
+<%= render 'shared/search_form' %>
+<%= render 'shared/flights_select' %>
+
