--- a/app/views/flights/_flights_select.html.erb
+++ b/app/views/flights/_flights_select.html.erb
@@ -1,4 +1,4 @@
-<table class="flights_select">
+<table class="flights_select" style="border: 1px solid black">
   <% if @flights.empty? %>
       <p> No results found! </p>
   <% else %>
@@ -7,16 +7,16 @@
       <th>Departure</th>
       <th>To</th>
       <th>From</th>
-      <th>Flight_Duration</th>
+      <th>Duration</th>
     </tr>
     <%= form_for :flight_select do |f| %>
-      <%= @flights.each do |flight| %>
-        <tr>
+      <% @flights.each do |flight| %>
+        <tr style="border: 1px solid black">
           <td><%= f.radio_button(:flight, flight.id) %></td>
           <td><%= flight.start_datetime %></td>
-          <td><%= Airport.find(flight.to_airport_id).code %>/td>
+          <td><%= Airport.find(flight.to_airport_id).code %></td>
           <td><%= Airport.find(flight.from_airport_id).code %></td>
-          <td><%= pluralize(flight.flight_duration.hours, 'hour') %></td>
+          <td><%= distance_of_time_in_words(flight.flight_duration) %></td>
         </tr>
       <% end %>
      <% end %>
