--- a/app/views/flights/_flights_select.html.erb
+++ b/app/views/flights/_flights_select.html.erb
@@ -1,4 +1,4 @@
-<table class="flights_select" style="border: 1px solid black">
+<table class="flights_select" style="border: 1px solid black;">
   <% if @flights.empty? %>
       <p> No results found! </p>
   <% else %>
@@ -11,7 +11,7 @@
     </tr>
     <%= form_for :flight_select do |f| %>
       <% @flights.each do |flight| %>
-        <tr style="border: 1px solid black">
+        <tr style="border: 1px solid black;">
           <td><%= f.radio_button(:flight, flight.id) %></td>
           <td><%= flight.start_datetime %></td>
           <td><%= Airport.find(flight.to_airport_id).code %></td>
