--- a/app/views/shared/_search_form.html.erb
+++ b/app/views/shared/_search_form.html.erb
@@ -13,7 +13,7 @@
       <td><%= f.select(:num_passengers, @num_passengers) %></td>
     </tr>
     <tr>
-      <%= f.submit "Search" %>
+      <td><%= f.submit "Search" %></td>
     </tr>
   </table>
 <% end %>
